# ManifoldGuard

./: CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  COMMERCIAL-LICENSE.md  CONTRIBUTING.md  LICENSE  MBT5_EXP01_EXP20_TECHNICAL_LEDGER.md  NOTICE.md  README.md  RELEASE_PROCESS.md  REPLICATION.md  SECURITY.md  SUPPORT.md  dangerous-driving limit, not censorship Regulator  pyproject.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: docs-quality.yml  package-publish.yml  tests.yml
docs/: benchmark.md  evaluation_report.md  exp21_challenge.md  exp22_challenge.md  exp23_challenge.md  exp24_challenge.md  exp25_challenge.md  extending.md  getting_started.md  package_installation.md  package_publishing.md  product_readiness_manifest.json  quality_gates.md  release_checklist.md  report_schema.json  report_schema.md  roadmap.md  v0.1.2_release_verification.md  v0.1.3_release_verification.md  v0.1.4_release_verification.md  v0.1.5_release_verification.md
examples/: batch_input.jsonl  batch_report_example.jsonl  build_challenge_corpus.py  build_exp22_challenge_corpus.py  build_exp23_challenge_corpus.py  build_exp24_challenge_corpus.py  build_exp25_challenge_corpus.py  build_regression_corpus.py  challenge_corpus.jsonl  cli_json_report.md  csv_audit_report.csv  exp22_challenge_corpus.jsonl  exp23_challenge_corpus.jsonl  exp24_challenge_corpus.jsonl  exp25_challenge_corpus.jsonl  explain_report.md  markdown_audit_report.md  personal_corpus_template.jsonl  single_report_example.json
legacy/: Basic testing  Colabs demo regulator 1.0  Inference-time confidence hallucination detection using geometry and self-consistency  README.md
mbt_ai_tools/: __init__.py  cli.py  eval.py
mbt_ai_tools/data/: regression_corpus.jsonl
mbt_ai_tools/mbt/: __init__.py  consensus.py  embeddings.py  geometry.py  regulator.py  stability.py  tokens.py
scripts/: build_eval_replay_pack.py  build_eval_report.py  compare_eval_reports.py  docs_quality.py  evaluate_regulator.py  install_smoke.py  preflight.py  release_check.py  release_evidence.py  release_readiness.py  validate_examples.py  validate_reports.py
tests/: test_build_eval_replay_pack.py  test_build_eval_report.py  test_challenge_corpus.py  test_cli.py  test_compare_eval_reports.py  test_docs_quality.py  test_evaluate_regulator.py  test_golden_behavior.py  test_regulator.py  test_release_check.py  test_release_evidence.py  test_release_readiness.py  test_tokens.py  test_validate_examples.py
