[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mbt-ai-tools"
version = "0.1.0"
description = "MBT-5 geometry-only inference-time regulator utilities"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "MBT-5 Contributors" }]
dependencies = [
  "numpy",
  "scipy"
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6.0,<3"]

[project.urls]
Homepage = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time"
Repository = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time"
Documentation = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time/blob/main/README.md"
Source = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time"
Issues = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time/issues"
Changelog = "https://github.com/Martin123132/Geometry-Only-Control-of-LLM-Output-at-Inference-Time/blob/main/CHANGELOG.md"

[project.scripts]
mbt-check = "mbt_ai_tools.cli:main"
mbt-eval = "mbt_ai_tools.eval:main"

[tool.setuptools]
packages = ["mbt_ai_tools", "mbt_ai_tools.mbt"]

[tool.setuptools.package-data]
mbt_ai_tools = ["data/*.jsonl"]
