[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manifold-guard"
version = "0.1.2"
description = "ManifoldGuard reference-bounded output regulator utilities"
readme = "README.md"
requires-python = ">=3.9"
license = "LicenseRef-MTNSL-1.0"
license-files = ["LICENSE"]
authors = [{ name = "ManifoldGuard Contributors" }]
dependencies = [
  "numpy",
  "scipy"
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=2.6.0,<3"]

[project.urls]
Homepage = "https://github.com/Martin123132/ManifoldGuard"
Repository = "https://github.com/Martin123132/ManifoldGuard"
Documentation = "https://github.com/Martin123132/ManifoldGuard/blob/main/README.md"
Source = "https://github.com/Martin123132/ManifoldGuard"
Issues = "https://github.com/Martin123132/ManifoldGuard/issues"
Changelog = "https://github.com/Martin123132/ManifoldGuard/blob/main/CHANGELOG.md"

[project.scripts]
manifold-check = "mbt_ai_tools.cli:main"
manifold-eval = "mbt_ai_tools.eval:main"
mbt-check = "mbt_ai_tools.cli:main"
mbt-eval = "mbt_ai_tools.eval:main"

[tool.setuptools]
packages = ["mbt_ai_tools", "mbt_ai_tools.mbt", "mbt_ai_tools.data"]

[tool.setuptools.package-data]
mbt_ai_tools = ["data/*.jsonl"]
